--- a/scss/excelsior/components/_buttons.scss
+++ b/scss/excelsior/components/_buttons.scss
@@ -122,7 +122,7 @@ input[type="button"].button-block {
 .button.success {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  @include gradient-horizontal(#0088cc, #0044cc);
+  @include gradient-vertical(#0088cc, #0044cc);
   border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -146,7 +146,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #faa732;
-  @include gradient-horizontal(#fbb450, #f89406);
+  @include gradient-vertical(#fbb450, #f89406);
   border-color: #f89406 #f89406 #ad6704;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -172,7 +172,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #da4f49;
-  @include gradient-horizontal(#ee5f5b, #bd362f);
+  @include gradient-vertical(#ee5f5b, #bd362f);
   border-color: #bd362f #bd362f #802420;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -198,7 +198,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
-  @include gradient-horizontal(#62c462, #51a351);
+  @include gradient-vertical(#62c462, #51a351);
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -221,7 +221,7 @@ input[type="button"].button-block {
 .button-info {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  @include gradient-horizontal(#5bc0de, #2f96b4);
+  @include gradient-vertical(#5bc0de, #2f96b4);
   background-color: #49afcd;
   border-color: #2f96b4 #2f96b4 #1f6377;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
@@ -247,7 +247,7 @@ input[type="button"].button-block {
 .button-inverse {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  @include gradient-horizontal(#444444, #222222);
+  @include gradient-vertical(#444444, #222222);
   background-color: #363636;
   border-color: #222222 #222222 #000000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
