--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -68,7 +68,7 @@
   top: 0;
   height: 0;
   background: #036;
-  @include gradient-horizontal(#002851, #036);
+  @include gradient-vertical(#002851, #036);
   overflow: hidden;
   @include transition(height 0.2s ease);
   width: 100%;
@@ -148,7 +148,7 @@
 
     &[type=submit] {
       background-color: #505050;
-      @include gradient-horizontal(#999, #505050);
+      @include gradient-vertical(#999, #505050);
       background: #505050;
       @include border-radius(0 5px 5px 0);
       border: 1px solid #666;
@@ -171,7 +171,7 @@
 /* Site Header */
 .site-bar {
     background: #454545;
-    @include gradient-horizontal(#5f5f5f, #282828);
+    @include gradient-vertical(#5f5f5f, #282828);
     height: 48px;
     position: absolute;
     top: 0;
@@ -252,7 +252,7 @@
 .site-bar .site-functions .site-button {
     float: left;
     background-color: #505050;
-    @include gradient-horizontal(#999, #505050);
+    @include gradient-vertical(#999, #505050);
     @include border-radius(0 5px 5px 0);
     border-color: #999;
     width: 14%;
@@ -481,7 +481,7 @@
   /* Site Header */
 
   .site-bar {
-      @include gradient-horizontal(#363636, #282828);
+      @include gradient-vertical(#363636, #282828);
       height: 90px;
       position: relative;
       width: 100%
