--- a/scss/excelsior/_variables.scss
+++ b/scss/excelsior/_variables.scss
@@ -6,6 +6,10 @@ $font-sans-italic: "SourceSansProItalic", $font-sans-fallback;
 $font-sans-bold-italic: "SourceSansProBoldItalic", $font-sans-fallback;
 $font-serif: "Merriweather", Georgia, serif;
 $font-icons: "Fontello";
+$icon-down-open: '\e75c'; // down open arrow
+$icon-left-open: '\e75d'; // left open arrow
+$icon-right-open: '\e75e'; // right open arrow
+$icon-up-open: '\e75f'; // up open arrow
 
 // Color
 
