--- a/scss/excelsior/components/_navigation.scss
+++ b/scss/excelsior/components/_navigation.scss
@@ -11,7 +11,7 @@
 
   /* Highjacked icon font to create after arrows */
   .icon-sub-menu:after {
-    content: "\e75e";
+    content: $icon-right-open;
     float: right;
     font-size: 1.2em;
     line-height: inherit;
@@ -581,7 +581,7 @@
   }
 
   .global-nav .icon-right-open.active:before {
-    content: '\e75c';
+    content: $icon-down-open;
   }
 
   .global-nav .nav-container ul li a.active {
