--- a/fonts/fontello/fontello.css
+++ b/fonts/fontello/fontello.css
@@ -1,9 +1,10 @@
-@charset "UTF-8";
-
 @font-face {
   font-family: 'fontello';
-  src: url("../font/fontello.eot?25133327");
-  src: url("../font/fontello.eot?25133327#iefix") format('embedded-opentype'), url("../font/fontello.woff?25133327") format('woff'), url("../font/fontello.ttf?25133327") format('truetype'), url("../font/fontello.svg?25133327#fontello") format('svg');
+  src: url('../fonts/fontello/fontello.eot?16228932');
+  src: url('../fonts/fontello/fontello.eot?16228932#iefix') format('embedded-opentype'),
+       url('../fonts/fontello/fontello.woff?16228932') format('woff'),
+       url('../fonts/fontello/fontello.ttf?16228932') format('truetype'),
+       url('../fonts/fontello/fontello.svg?16228932#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,64 +14,43 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?25133327#fontello') format('svg');
+    src: url('../font/fontello.svg?16228932#fontello') format('svg');
   }
 }
 */
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: 'fontello';
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
   font-style: normal;
   font-weight: normal;
   speak: none;
+ 
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: 0.2em;
+  margin-right: .2em;
   text-align: center;
-/* opacity .8 */
-/* For safety - reset parent styles, that can break glyph codes*/
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-/* fix buttons height, for twitter bootstrap */
+     
+  /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
-/* Animation center compensation - magrins should be symmetric */
-/* remove if not needed */
-  margin-left: 0.2em;
-/* you can be more comfortable with increased icons size */
-/* font-size: 120%; */
-/* Uncomment for 3D effect */
-/* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+ 
+  /* Animation center compensation - magrins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
-
-.icon-up-dir:before { content: '\25b4'; } /* '▴' */
-.icon-right-dir:before { content: '\25b8'; } /* '▸' */
-.icon-down-dir:before { content: '\25be'; } /* '▾' */
-.icon-left-dir:before { content: '\25c2'; } /* '◂' */
-.icon-cancel:before { content: '\2715'; } /* '✕' */
-.icon-list:before { content: '\e005'; } /* '' */
-.icon-comment-1:before { content: '\e718'; } /* '' */
-.icon-comment-alt:before { content: '\e71a'; } /* '' */
-.icon-chat:before { content: '\e720'; } /* '' */
-.icon-down-open:before { content: '\e75c'; } /* '' */
-.icon-left-open:before { content: '\e75d'; } /* '' */
-.icon-right-open:before { content: '\e75e'; } /* '' */
-.icon-up-open:before { content: '\e75f'; } /* '' */
-.icon-down-open-mini:before { content: '\e760'; } /* '' */
-.icon-left-open-mini:before { content: '\e761'; } /* '' */
-.icon-right-open-mini:before { content: '\e762'; } /* '' */
-.icon-up-open-mini:before { content: '\e763'; } /* '' */
-.icon-down-open-big:before { content: '\e764'; } /* '' */
-.icon-left-open-big:before { content: '\e765'; } /* '' */
-.icon-right-open-big:before { content: '\e766'; } /* '' */
-.icon-up-open-big:before { content: '\e767'; } /* '' */
-.icon-phone-squared:before { content: '\f098'; } /* '' */
-.icon-comment-empty:before { content: '\f0e5'; } /* '' */
-.icon-chat-empty:before { content: '\f0e6'; } /* '' */
-.icon-comment:before { content: '\f4ac'; } /* '' */
-.icon-search-3:before { content: '\f50d'; } /* '' */
-.icon-phone:before { content: '📞'; } /* '\1f4de' */
-.icon-phone-1:before { content: '\e800'; } /* '' */
-.icon-search:before { content: '🔍'; } /* '\1f50d' */
-.icon-search-1:before { content: '\e801'; } /* '' */
-.icon-search-2:before { content: '\e802'; } /* '' */
+ 
+.icon-down-open:before { content: '\e75c'; }/* down open arrow */
+.icon-left-open:before { content: '\e75d'; } /* left open arrow */
+.icon-right-open:before { content: '\e75e'; } /* right open arrow */
+.icon-up-open:before { content: '\e75f'; } /* up open arrow */
