Added Breakpoint to off-canvass

--- a/excelsior/scss/excelsior.scss
+++ b/excelsior/scss/excelsior.scss
@@ -2,6 +2,7 @@
 // Do not change the order of these files:
 @import "foundation/_normalize.scss";
 @import "foundation/_foundation.scss";
+@import "breakpoint";
 @import "excelsior/_variables.scss";
 @import "excelsior/_mixins.scss";
 @import "excelsior/_foundation-override.scss";
