--- a/excelsior/scss/excelsior/_variables.scss
+++ b/excelsior/scss/excelsior/_variables.scss
@@ -1,3 +1,6 @@
+// Module configuration
+$breakpoint-to-ems: 'true';
+
 // Fonts
 $font-sans-fallback: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 $font-sans: "SourceSansPro", $font-sans-fallback;
