--- a/excelsior/scss/off-canvas.scss
+++ b/excelsior/scss/off-canvas.scss
@@ -5,296 +5,298 @@
 
 @media only screen {
 
-  html,
-  body {
-    background: #282828;
-    height: 100%;
-  }
-
-  body.off-canvas {
-    padding-top: $nav-bar-height;
-
-    @include breakpoint(48em) {
-        padding-top: 0;
-    }
-  }
-
-  .off-canvas {
-
-    .gov-pull-down-container {
-      position: absolute;
-      top: 0;
-    }
-
-    .gov-pull-down {
-      height: 40px;
-      width: 44px;
-    }
-
-    .gov-bar {
-        position: absolute;
-        width: 100%;
-
-        form {
-            margin: 0;
-        }
-    }
-
-    .site-bar {
-        position: absolute;
-        width: 100%;
-    }
-
-    .global-nav {
-        position: fixed;
-        top: 0;
+    html,
+    body {
+        background: #282828;
         height: 100%;
-        width: 100%;
-        z-index: 0;
+    }
+
+    body.off-canvas {
+        padding-top: $nav-bar-height;
 
         @include breakpoint(48em) {
-            height: 46px;
-            overflow: visible;
-            z-index: 30;
+            padding-top: 0;
         }
     }
 
-    .global-nav .sub-menu-title {
-      display: inline-block;
-      color: #AAA;
-      font-size: 1.45em;
-      position: relative;
-      left: 20%;
-      line-height: $nav-bar-height;
-      padding-top: 0.15em;
-    }
+    .off-canvas {
 
-    .global-nav .nav-container {
-        height: inherit;
-        overflow-y: scroll;
-
-        @include breakpoint(60em) {
-            @include border-radius(4px);
-        }
-    }
-
-    .global-nav .nav-container > ul {
-      min-height: 1000px;
-    }
-
-    .global-nav ul {
-      margin-left: 16%;
-    }
-
-    .global-nav ul li {
-        padding-left: 3%;
-
-        @include breakpoint(48em) {
-            padding-left: 0;
-        }
-    }
-
-    .global-nav ul ul {
-        position: fixed;
-        top: 53px;
-        left: 100%;
-        display: block;
-        height: 100%;
-        width: 100%;
-        background: #333 !important;
-        @include transition(left 0.2s ease);
-
-        @include breakpoint(48em) {
+        .gov-pull-down-container {
             position: absolute;
-            top: 50px !important;
-            left: 0;
-            background: #454545 !important; /* M */
-            border-radius: 4px !important; /* Do not use mixin here */
-            background-clip: padding-box !important;
-            overflow: hidden;
-            visibility: hidden;
-            @include transition(left 0s ease);
-        }
-    }
-
-    .global-nav ul ul li {
-        padding-left: 2% !important;
-
-        @include breakpoint(48em) {
-            border-right: 1px solid #000;
-            border-left: 1px solid #666;
+            top: 0;
         }
 
-        &:first {
-            @include breakpoint(48em) {
-                border-left: none;
+        .gov-pull-down {
+            height: 40px;
+            width: 44px;
+        }
+
+        .gov-bar {
+            position: absolute;
+            width: 100%;
+
+            form {
+                margin: 0;
             }
         }
-    }
 
-    .global-nav .menu-controls {
-        height: 53px;
-
-        @include breakpoint(48em) {
-            display: none;
+        .site-bar {
+            position: absolute;
+            width: 100%;
         }
-    }
 
-    .global-nav .menu-controls .menu-back {
-        float: right;
-        @include gradient-vertical(#999, #505050);
-        @include border-radius(5px);
-        color: #fff;
-        margin: 10px;
-        padding: 7px 7px 7px 1px;
-        visibility: hidden;
-    }
+        .global-nav {
+            position: fixed;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            z-index: 0;
 
-    &.active-sub-menu .global-nav .menu-controls .menu-back {
-        visibility: visible;
-    }
-
-    .global-nav .active-menu {
-        left: 0;
-        z-index: 1;
-
-        li {
             @include breakpoint(48em) {
-                padding-left: 0;
-                border-bottom: 0;
+                height: 46px;
+                overflow: visible;
+                z-index: 30;
+            }
 
-                a {
-                    border-radius: 4px;
-                    background: #454545 !important;
+            .sub-menu-title {
+                display: inline-block;
+                color: #AAA;
+                font-size: 1.45em;
+                position: relative;
+                left: 20%;
+                line-height: $nav-bar-height;
+                padding-top: 0.15em;
+            }
+
+            .nav-container {
+                height: inherit;
+                overflow-y: scroll;
+
+                @include breakpoint(60em) {
+                    @include border-radius(4px);
+                }
+
+                & > ul {
+                    min-height: 1000px;
                 }
             }
+
+            ul {
+                margin-left: 16%;
+
+                li {
+                    padding-left: 3%;
+
+                    @include breakpoint(48em) {
+                        padding-left: 0;
+                    }
+                }
+
+                ul {
+                    position: fixed;
+                    top: 53px;
+                    left: 100%;
+                    display: block;
+                    height: 100%;
+                    width: 100%;
+                    background: #333 !important;
+                    @include transition(left 0.2s ease);
+
+                    @include breakpoint(48em) {
+                        position: absolute;
+                        top: 50px !important;
+                        left: 0;
+                        background: #454545 !important; /* M */
+                        border-radius: 4px !important; /* Do not use mixin here */
+                        background-clip: padding-box !important;
+                        overflow: hidden;
+                        visibility: hidden;
+                        @include transition(left 0s ease);
+                    }
+
+                    li {
+                        padding-left: 2% !important;
+
+                        @include breakpoint(48em) {
+                            border-right: 1px solid #000;
+                            border-left: 1px solid #666;
+                        }
+
+                        &:first {
+                            @include breakpoint(48em) {
+                                border-left: none;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .menu-controls {
+                height: 53px;
+
+                @include breakpoint(48em) {
+                    display: none;
+                }
+
+                .menu-back {
+                    float: right;
+                    @include gradient-vertical(#999, #505050);
+                    @include border-radius(5px);
+                    color: #fff;
+                    margin: 10px;
+                    padding: 7px 7px 7px 1px;
+                    visibility: hidden;
+                }
+            }
+
+            .active-menu {
+                left: 0;
+                z-index: 1;
+
+                li {
+                    @include breakpoint(48em) {
+                        padding-left: 0;
+                        border-bottom: 0;
+
+                        a {
+                            border-radius: 4px;
+                            background: #454545 !important;
+                        }
+                    }
+                }
+            }
+        } // end .global-nav
+
+        &.active-sub-menu .global-nav .menu-controls .menu-back {
+            visibility: visible;
         }
-    }
 
-    .page {
-        position: relative;
-        height: auto;
-        min-height: 100%;
-        top: 0;
-        width: 100%;
+        .page {
+            position: relative;
+            height: auto;
+            min-height: 100%;
+            top: 0;
+            width: 100%;
 
-        @include breakpoint(48em) {
-            min-height: auto;
-            top: -23px;
-            left: 0;
-        }
-    }
-
-    .gov-pull-down,
-    .gov-pull-down-container,
-    .gov-bar,
-    .site-bar,
-    .page {
-      @include transition-three(top 0.2s ease, left 0.2s ease, height 0.2s ease);
-    }
-
-    &.active-gov-bar {
-        .gov-pull-down-container,
-        .site-bar {
-           top: 88px;
-        }
-
-        .site-bar {
             @include breakpoint(48em) {
-                top: 0;
+                min-height: auto;
+                top: -23px;
+                left: 0;
             }
         }
-    }
 
-    &.active-site-menu {
         .gov-pull-down,
         .gov-pull-down-container,
         .gov-bar,
         .site-bar,
         .page {
-          position: fixed;
-          left: -82%;
+            @include transition-three(top 0.2s ease, left 0.2s ease, height 0.2s ease);
         }
-    }
 
-    .gov-bar,
-    .site-bar,
-    .global-nav,
-    .page {
-        @include breakpoint(48em) {
-            position: relative;
+        .gov-bar,
+        .site-bar,
+        .global-nav,
+        .page {
+            @include breakpoint(48em) {
+                position: relative;
+            }
         }
-    }
 
-    &.active-site-menu .gov-bar,
-    &.active-site-menu .site-bar,
-    &.active-site-menu .global-nav,
-    &.active-site-menu .page {
-        @include breakpoint(48em) {
-            left: auto;
-            position: relative;
+        &.active-gov-bar {
+            .gov-pull-down-container,
+            .site-bar {
+                top: 88px;
+            }
+
+            .site-bar {
+                @include breakpoint(48em) {
+                    top: 0;
+                }
+            }
         }
-    }
 
-    &.active-site-menu .global-nav .icon-right-open:before {
-      padding-top: 3px;
-      position: absolute;
-      right: 5%;
+        &.active-site-menu {
+            .gov-pull-down,
+            .gov-pull-down-container,
+            .gov-bar,
+            .site-bar,
+            .page {
+              position: fixed;
+              left: -82%;
+            }
 
-      @include breakpoint(48em) {
-        position: relative;
-        right: auto;
-      }
-    }
+            .gov-bar,
+            .site-bar,
+            .global-nav,
+            .page {
+                @include breakpoint(48em) {
+                    left: auto;
+                    position: relative;
+                }
+            }
 
-    &.active-site-menu .mobile-menu-button {
-      box-shadow: inset 6px 0px 8px -2px #000;
-    }
+            .global-nav .icon-right-open:before {
+                padding-top: 3px;
+                position: absolute;
+                right: 5%;
 
-    &.active-site-menu .page {
-      box-shadow: 5px 49px 8px #000;
-    }
+                @include breakpoint(48em) {
+                    position: relative;
+                    right: auto;
+                }
+            }
 
-    &.active-site-menu .footer {
-        left: -82%;
-        @include breakpoint(48em) {
-            left: auto;
-        }
-    }
+            .mobile-menu-button {
+                box-shadow: inset 6px 0px 8px -2px #000;
+            }
 
-    &.active-site-menu .page {
-        @include breakpoint(48em) {
-            box-shadow: none;
-        }
-    }
-  }
-}
+            .page {
+                box-shadow: 5px 49px 8px #000;
+
+                @include breakpoint(48em) {
+                    box-shadow: none;
+                }
+            }
+
+            .footer {
+                left: -82%;
+
+                @include breakpoint(48em) {
+                    left: auto;
+                }
+            }
+
+        } // end &.active-site-menu
+
+    } // end .off-canvas
+
+} // end @media only screen
 
 /* Medium Displays: 768px - 1279px */
 @media only screen and (min-width: 48em) {
 
-  .off-canvas {
+    .off-canvas {
 
-    .global-nav .nav-container,
-    &.active-site-menu .global-nav .nav-container {
-      overflow: hidden;
-    }
+        .global-nav .nav-container,
+        &.active-site-menu .global-nav .nav-container {
+            overflow: hidden;
+        }
 
-    .global-nav .nav-container > ul,
-    &.active-site-menu .global-nav .nav-container ul {
-      min-height: auto;
-    }
+        .global-nav .nav-container > ul,
+        &.active-site-menu .global-nav .nav-container ul {
+            min-height: auto;
+        }
 
-    .global-nav ul,
-    &.active-site-menu .global-nav ul {
-      margin-left: 0;
-    }
+        .global-nav ul {
+            margin-left: 0;
 
-    .global-nav ul ul.active-menu {
-        visibility: visible;
-        li {
-            padding: 0 !important;
+            ul.active-menu {
+                visibility: visible;
+
+                li {
+                    padding: 0 !important;
+                }
+            }
         }
     }
-  }
 }
